View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026099 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-04-20 08:16 | 2015-10-23 20:49 |
Reporter | Assigned To | bugmaster | |||
Priority | urgent | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026099: Wrong result done by 2d intersection algorithm | ||||
Description | The result of intersection of two 2d curves is wrong - the intersection point does not belong to one of the curves (see attached image) | ||||
Steps To Reproduce | restore f.brep f explode f e pcurve c4 f_4 f pcurve c5 f_5 f set out [2dintersect c4 c5] if ![regexp {fist: ([\-0-9.]*) .*second: ([\-0-9.]*)} $out dummy par1 par2] { error "Error: no intersection" } set refpar1 0.98989794855663704 set refpar2 0 if {[expr abs($par1-$refpar1)] > 0.0001 || [expr abs($par2-$refpar2)] > 0.0001} { error "Error: parameters are $par1 and $par2, expected $refpar1 and $refpar2" } | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug26099 | ||||
2015-04-20 08:16 developer |
f.brep (10,450 bytes) |
2015-04-20 08:16 developer |
001.png (13,499 bytes) |
|
Branch CR26099 has been created by msv. SHA-1: 47eda4e138dfe4bd3b2c6d2f4c157e633556bb7d Detailed log of new commits: Author: msv Date: Thu May 7 11:18:25 2015 +0300 0026099: Wrong result done by 2d intersection algorithm Detection of intersection for almost parallel lines has been improved. |
|
Branch CR26099 has been updated forcibly by msv. SHA-1: ce0e280fa87ce13e1841a3e76f663a1f3310071b |
|
Dear nbv, please review the branch CR26099. |
|
Reviewed. |
|
Branch CR26099 has been updated forcibly by apv. SHA-1: d1599873715f7c6ffa4cde9f7522365c0e10655c |
|
Branch CR26099 has been rebased on the current master. |
|
Dear BugMaster, Branch CR26099 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: d1599873715f7c6ffa4cde9f7522365c0e10655c Number of compiler warnings: occt component: Linux: 19 (18 on master) Windows: 0 (0 on master) products component: Linux: 4 (4 on master) Windows: 0 (0 on master) There is new additional warning on Linux: IntCurve_IntConicConic_1.cxx:551, GNU C Compiler 4 (gcc), Priority: Normal suggest parentheses around ‘&&’ within ‘||’ Regressions/Differences: http://occt-tests/CR26099-master-occt-64/Debian60-64/summary.html http://occt-tests/CR26099-master-occt-64/Windows-64-VC10/summary.html boolean bfuse_complex(013) F5, Q2 boolean volumemaker(025) A4(Linux only), B4(Windows only), D5, F8 bugs modalg_2(007) bug23341 offset wire_unclosed_outside_0_025(014) B4 Testing on Linux: Total MEMORY difference: 95660171 / 95591003 [+0.07%] Total CPU difference: 56547.96999999931 / 51842.43999999939 [+9.08%] Testing on Windows: Total MEMORY difference: 59364841 / 59134141 [+0.39%] Total CPU difference: 17161.124006499078 / 17085.026718698864 [+0.45%] |
|
Branch CR26099_1 has been created by nbv. SHA-1: d534821da603e67a370bbdabd263f982a2ff33fd Detailed log of new commits: Author: nbv Date: Tue Sep 8 14:37:39 2015 +0300 0026099: Wrong result done by 2d intersection algorithm Detection of intersection for almost parallel lines has been improved. Author: nbv Date: Tue Sep 8 14:35:38 2015 +0300 0026652: OCC_DEBUG definition is always added to the compiler command line a misprint in the if statement fixed |
|
Branch CR26099_1 has been updated forcibly by nbv. SHA-1: 8202e4f050aa4d7d173517cab0fcc31b347dc38f |
|
Dear Mikhail, Please review CR26099_1 branch. |
|
Reviewed. |
|
Nikolay, please create also a version of the fix for ASML branch CR25926_V6_9_0p3 after regression testing. |
|
Dear BugMaster, Branch CR26099_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 8202e4f050aa4d7d173517cab0fcc31b347dc38f Number of compiler warnings: occt component: Linux: 15 (15 on master) Windows: 0 (0 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR26099-1-master-occt-64/Windows-64-VC10/summary.html boolean volumemaker B6 Testing on Linux: Total MEMORY difference: 90832386 / 91890278 [-1.15%] Total CPU difference: 17684.23999999925 / 17458.699999998928 [+1.29%] Testing on Windows: Total MEMORY difference: 57137682 / 57144262 [-0.01%] Total CPU difference: 16610.58087739927 / 16583.857906099325 [+0.16%] |
|
Dear Testers, Please change script for regression test case according to its new behavior. There are two reasons for that: 1. The test already is BAD in terms of checkshape and bopargcheck algorithms. 2. The test already has difference between Linux and Windows platform (see "TODO OCC26020 Linux: Error : The area of the resulting shape is"). |
|
Dear Mikhail, Please confirm the message http://tracker.dev.opencascade.org/view.php?id=26099#c45428. |
|
OK, though I think you could change the script by yourself. |
|
Branch CR26099_1 has been updated by apv. SHA-1: e173a441aeaeda6cdca4d517b20f02ef6fd28443 Detailed log of new commits: Author: apv Date: Fri Sep 11 15:30:12 2015 +0300 Test-case for issue 0026099 and adjusting of test-case boolean volumemaker B6 |
|
Result of testing case: bugs modalg_6 bug26099 - OK http://occt-tests/CR26099-1-master-occt-64/Debian70-64/bugs/modalg_6/bug26099.html http://occt-tests/CR26099-1-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26099.html |
|
Branch CR26099_1 has been deleted by kgv. SHA-1: e173a441aeaeda6cdca4d517b20f02ef6fd28443 |
|
Branch CR26099 has been deleted by kgv. SHA-1: d1599873715f7c6ffa4cde9f7522365c0e10655c |
occt: master ba5ab97f 2015-09-17 09:46:15
Committer: bugmaster Details Diff |
0026099: Wrong result done by 2d intersection algorithm Detection of intersection for almost parallel lines has been improved. Test-case for issue 0026099 and adjusting of test-case boolean volumemaker B6 |
Affected Issues 0026099 |
|
mod - src/IntCurve/IntCurve_IntConicConic_1.cxx | Diff File | ||
mod - tests/boolean/volumemaker/B6 | Diff File | ||
add - tests/bugs/modalg_6/bug26099 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-04-20 08:16 |
|
New Issue | |
2015-04-20 08:16 |
|
Assigned To | => msv |
2015-04-20 08:16 |
|
File Added: f.brep | |
2015-04-20 08:16 |
|
File Added: 001.png | |
2015-04-20 12:32 |
|
Status | new => assigned |
2015-04-20 12:32 |
|
Target Version | => 6.9.0 |
2015-04-30 14:39 |
|
Steps to Reproduce Updated | |
2015-04-30 14:48 |
|
Steps to Reproduce Updated | |
2015-04-30 15:03 |
|
Steps to Reproduce Updated | |
2015-04-30 18:05 |
|
Target Version | 6.9.0 => 7.1.0 |
2015-05-07 11:18 | git | Note Added: 0040700 | |
2015-05-07 11:22 | git | Note Added: 0040701 | |
2015-05-07 11:40 |
|
Note Added: 0040705 | |
2015-05-07 11:40 |
|
Assigned To | msv => nbv |
2015-05-07 11:40 |
|
Status | assigned => resolved |
2015-05-07 12:50 |
|
Note Added: 0040726 | |
2015-05-07 12:50 |
|
Assigned To | nbv => bugmaster |
2015-05-07 12:50 |
|
Status | resolved => reviewed |
2015-05-07 18:36 |
|
Assigned To | bugmaster => apv |
2015-05-08 16:17 | git | Note Added: 0040795 | |
2015-05-08 16:18 |
|
Note Added: 0040798 | |
2015-05-12 17:25 |
|
Note Added: 0040834 | |
2015-05-12 17:25 |
|
Assigned To | apv => msv |
2015-05-12 17:25 |
|
Status | reviewed => assigned |
2015-09-08 14:33 |
|
Assigned To | msv => nbv |
2015-09-08 14:34 |
|
Priority | normal => urgent |
2015-09-08 14:34 |
|
Assigned To | nbv => msv |
2015-09-08 14:34 |
|
Assigned To | msv => nbv |
2015-09-08 14:34 |
|
Target Version | 7.1.0 => 6.9.1 |
2015-09-09 10:06 | git | Note Added: 0045278 | |
2015-09-09 10:07 | git | Note Added: 0045279 | |
2015-09-09 10:08 |
|
Note Added: 0045280 | |
2015-09-09 10:08 |
|
Assigned To | nbv => msv |
2015-09-09 10:08 |
|
Status | assigned => resolved |
2015-09-09 10:56 |
|
Note Added: 0045284 | |
2015-09-09 10:56 |
|
Assigned To | msv => bugmaster |
2015-09-09 10:56 |
|
Status | resolved => reviewed |
2015-09-09 10:59 |
|
Note Added: 0045285 | |
2015-09-09 12:51 |
|
Assigned To | bugmaster => apv |
2015-09-10 15:28 |
|
Note Added: 0045427 | |
2015-09-10 15:28 |
|
Assigned To | apv => nbv |
2015-09-10 15:28 |
|
Status | reviewed => assigned |
2015-09-10 15:36 |
|
Note Added: 0045428 | |
2015-09-10 15:37 |
|
Note Added: 0045429 | |
2015-09-10 15:37 |
|
Assigned To | nbv => msv |
2015-09-10 15:37 |
|
Status | assigned => resolved |
2015-09-10 15:43 |
|
Note Added: 0045432 | |
2015-09-10 15:43 |
|
Assigned To | msv => bugmaster |
2015-09-10 15:43 |
|
Status | resolved => reviewed |
2015-09-10 16:57 |
|
Assigned To | bugmaster => apv |
2015-09-11 15:30 | git | Note Added: 0045496 | |
2015-09-11 15:31 |
|
Test case number | => bugs modalg_6 bug26099 |
2015-09-11 15:33 |
|
Note Added: 0045497 | |
2015-09-11 15:33 |
|
Assigned To | apv => bugmaster |
2015-09-11 15:33 |
|
Status | reviewed => tested |
2015-09-18 13:31 | bugmaster | Changeset attached | => occt master ba5ab97f |
2015-09-18 13:31 | bugmaster | Status | tested => verified |
2015-09-18 13:31 | bugmaster | Resolution | open => fixed |
2015-10-16 14:55 |
|
Status | verified => closed |
2015-10-16 16:37 | git | Note Added: 0046968 | |
2015-10-16 16:47 | git | Note Added: 0047043 | |
2015-10-23 20:49 |
|
Fixed in Version | => 6.9.1 |