0026099: Wrong result done by 2d intersection algorithm

Detection of intersection for almost parallel lines has been improved.